= ???
* enhancements
  * Less aggressive rescuing at constantizing a string, to let more descriptive exceptions get through.

= v0.7.3 - 2011-09-04
* Rails 3.1 compatibility. Really. Hopefully.

= v0.7.2 - 2011-08-31
* Rails 3.1
* bug fix
  * When a component is dynamically loaded in a container, the load mask is now limited to that container
* enhancements
  * New +append+ config option for loadNetzkeComponent, which prevents emptying the container when inserting the newly loaded component; can be used for loading components into layouts different from 'fit'

= v0.7.1 - 2011-08-17
* bug fix
  * Multiple compound Netzke components in the same Rails view were causing JS errors

= v0.7.0 - 2011-08-09
* Ext JS 4 compatibility

* API changes
  * New +ext_uri+ config option (defaults to "extjs") - relative URI to the Ext JS library on the server.
  * New +ext3_compat_uri+ config option (defaults to +nil+) - relative URI to the Ext 3 compatibility layer. When nil, no compatibility layer is loaded.
  * New +current_user_method+ config option (defaults to :current_user) to let Netzke::Core know which method to call on Rails controller to retrieve the current user.
  * New +Netzke::Core.current_user+ method to retrieve the current user.
  * Passing instructions from server back to the client now is only meant for single-argument methods on client; arrays are not expanded into arguments any longer.
  * New +instantiateChildNetzkeComponent+ method to instantiate a Netzke component by name.
  * Default component height (400) and border (false) are no longer set.

* broken API
  * The +ext_location+ config option renamed to +ext_path+
  * loadNetzkeComponent (ex loadComponent) won't automatically show a component with xtype 'window' any longer; use the callback to do  that manually

* enhancements
  * +js_mixin+ without parameters will assume :component_class_name_underscored
  * Ext locale file is automatically included when I18n.locale is not :en