@@ -9,7 +9,7 @@ Gem::Specification.new do |s|
 
   s.required_rubygems_version = Gem::Requirement.new(">= 0") if s.respond_to? :required_rubygems_version=
   s.authors = [%q{NomadCoder}]
-  s.date = %q{2011-09-24}
+  s.date = %q{2011-10-13}
   s.description = %q{Allows building DRY ExtJS/Rails applications by enabling modular development}
   s.email = %q{nmcoder@gmail.com}
   s.extra_rdoc_files = [
