@@ -1,6 +1,6 @@
 # This component has the header hidden by custom CSS
 class ComponentWithCustomCss < Netzke::Base
-  js_property :title, "ComponentWithCustomCss"
+  title "ComponentWithCustomCss"
 
   js_property :html, "A component with the body hidden by means of custom CSS"
 
