@@ -1,5 +1,6 @@
 class ComponentWithJsMixin < Netzke::Base
-  js_property :title, "ComponentWithJsMixin"
+  title "ComponentWithJsMixin"
+
   js_include :extra_one, :extra_two
   js_mixin :method_set_one, :method_set_two
   js_mixin # with no parameters, it'll assume :component_with_js_mixin
